--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "dependencies": {
     "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^4.0.3",
-    "styled-components": "^5.3.5"
+    "react-scripts": "^5.0.1",
+    "styled-components": "^5.3.5",
+    "sweetalert": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
